Making the fail error message more readable.
Old output
---------------------------------------------------------------------
borderRadius at index 0 failed undefined borderRadius
Value - ["calc",0,"px",2.5,"%"], Expected - [[0,"px"]]
Expected value "0,px" did not match
  Element 1 - assert_equals: expected "string" but got "number"
  Element 0 - assert_equals: expected "number" but got "string"
  Number of elements don't match
---------------------------------------------------------------------

New output
---------------------------------------------------------------------
Element div#borderRadius at index 0 failed
 Property borderBottomRightRadius
  Actual - ["calc",0,"px",2.5,"%"]
  Expectation [0,"px"] did not match
   Number of elements don't match
   Element 0 - assert_equals: expected "number" but got "string"
   Element 1 - assert_equals: expected "string" but got "number"
---------------------------------------------------------------------

--- a/test/testcases/unit-test-testharness.html
+++ b/test/testcases/unit-test-testharness.html
@@ -54,7 +54,7 @@ test(function() {
     assert_styles(element, {'clip': 'rect(1px 2px 3px 4px)'});
     assert_unreached();
   } catch (e) {
-    assert_regexp_match(e.message, /^Value - /);
+    assert_regexp_match(e.message, /Actual - /);
   }
 }, 'assert_styles given invalid style');
 
