Get rid of the scrollbar

--- a/demos/index.html
+++ b/demos/index.html
@@ -30,7 +30,7 @@ limitations under the License.
         padding: 0;
       }
       html, body {
-        overflow-x: hidden;
+        overflow: hidden;
       }
       h1 {
         position: relative;
