add hill container

--- a/demos/index.html
+++ b/demos/index.html
@@ -93,9 +93,12 @@ limitations under the License.
         z-index: 2;
         position: relative;
       }
-      .hills {
-        top: 32vh;
-        left: -12vw;
+      #hill-container {
+        overflow: hidden;
+      }
+      #hill {
+        top: 25vmin;
+        left: -10vw;
         background: #E8E8E8;
         border-radius: 80vw 80vw 0 0;
         width: 80vw;
@@ -103,10 +106,6 @@ limitations under the License.
         position: absolute;
         z-index: 1;
         background: #8CDD81;
-      }
-      #hill {
-        top: 25vmin;
-        left: -10vw;
       }
       #zeppelin {
         height: 10vmin;
@@ -203,7 +202,9 @@ limitations under the License.
       <h1>Web Animations</h1>
       <img id="zeppelin" src="zeppelin.svg" alt="Demos">
     </div>
-    <div id="hill" class="hills"></div>
+    <div id="hill-container">
+      <div id="hill"></div>
+    </div>
     <div id="grass">
       <ul>
         <a class="demo-link" href="rolio/rolio.html"><li>Rolio</li></a>
