--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -164,6 +164,14 @@ function trueOffsetTop(element) {
   }
 }
 
+/**
+ * Get a value for busting the cache.
+ */
+var cacheBusterValue = '' + window.Date.now();
+function getCacheBuster() {
+  return cacheBusterValue;
+}
+
 
 /**
  * Get the most accurate version of time possible.
@@ -194,9 +202,6 @@ function now() {
  * @return {Element} tbody containing newly created table rows.
  */
 function createTestRows(testName, testURL) {
-  // Prevent caching of the test file.
-  testURL += '?' + Date.now();
-
   var tableGroup = document.createElement('tbody');
   tableGroup.id = testName.replace('.', '-');
 
@@ -237,7 +242,7 @@ function createTestRows(testName, testURL) {
 
   // iframe containing a preview of object
   var iframe = document.createElement('iframe');
-  iframe.src = testURL + '#message';
+  iframe.src = testURL + '?' + getCacheBuster() + '#message';
 
   var iframeCell = document.createElement('td');
   iframeCell.colSpan = '4';
