--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -17,154 +17,152 @@ Written by Steph McArthur
 -->
 
 <!DOCTYPE html><meta charset="UTF-8">
-<div id="anim"></div>
+<div id="target"></div>
 
 <script src="../bootstrap.js"></script>
 <script>
-var animation = new Animation(anim, {left: "100px"}, 100);
-var dt = document.timeline;
+function createAnimation() {
+  return new Animation(target, { left: '100px' }, 100)
+}
+function createPlayer(animation) {
+  return document.timeline.play(animation || createAnimation());
+}
 
-// Test Player.timeline.
-var player1 = dt.play(animation);
-test(function() {assert_equals(player1.timeline,  document.timeline)},
-     "Player.timeline is document timeline");
-
-// Test that TimedItem.player and Player.source are consistent.
-test(function() {assert_equals(player1.source,  animation)},
-     "Player.source should be the Animation");
-test(function() {assert_equals(animation.player,  player1)},
-     "TimedItem.player should be the Player");
+// Test Player.timeline, Player.source and TimedItem.player.
+var animation1 = createAnimation();
+var player1 = createPlayer(animation1);
+test(function() { assert_equals(player1.timeline, document.timeline); },
+    'Player.timeline is document timeline');
+test(function() { assert_equals(player1.source, animation1); },
+    'Player.source should be the Animation');
+test(function() { assert_equals(animation1.player, player1); },
+    'TimedItem.player should be the Player');
 
 // Test that play() always returns a new Player.
-var player2 = dt.play(animation);
-test(function() {assert_not_equals(player2,  player1)},
-     "Repeated calls to play() should create a new Player");
-test(function() {assert_equals(animation.player,  player2)},
-     "Repeated play(): TimedItem.player should be the Player");
-test(function() {assert_equals(player2.source,  animation)},
-     "Repeated play(): Player.source should be the Animation");
-test(function() {assert_equals(player2.startTime,  player1.startTime)},
-     "Repeated play(): Players should have same start time");
+var player2 = createPlayer(animation1);
+test(function() { assert_not_equals(player2, player1); },
+    'Repeated calls to play() should create a new Player');
+test(function() { assert_equals(animation1.player, player2); },
+    'Repeated play(): TimedItem.player should be the Player');
+test(function() { assert_equals(player2.source, animation1); },
+    'Repeated play(): Player.source should be the Animation');
+test(function() { assert_equals(player2.startTime, player1.startTime); },
+    'Repeated play(): Players should have same start time');
 
 // Test explicit setting of Player.source.
-player1.source = animation;
-test(function() {assert_equals(player2.source,  null)},
-     "Set Player.source: Old Player.source should be null");
-test(function() {assert_equals(player1.source,  animation)},
-     "Set Player.source: New Player.source should be the Animation");
-test(function() {assert_equals(animation.player,  player1)},
-     "Set Player.source: TimedItem.player should be the Player");
+player1.source = animation1;
+test(function() { assert_equals(player2.source, null); },
+    'Set Player.source: Old Player.source should be null');
+test(function() { assert_equals(player1.source, animation1); },
+    'Set Player.source: New Player.source should be the Animation');
+test(function() { assert_equals(animation1.player, player1); },
+    'Set Player.source: TimedItem.player should be the Player');
 
 // Test that TimedItem.player gives null on a detached tree.
-var animation2 =
-    new Animation(document.getElementById("anim"), {left: "100px"});
+var animation2 = createAnimation();
 var parGroup = new ParGroup([animation2]);
-test(function() {assert_equals(parGroup.player,  null)},
-     "TimedItem.player should be null for root");
-test(function() {assert_equals(animation2.player,  null)},
-     "TimedItem.player should be null for leaf");
+test(function() { assert_equals(parGroup.player, null); },
+    'TimedItem.player should be null for root');
+test(function() { assert_equals(animation2.player, null); },
+    'TimedItem.player should be null for leaf');
 
 // Test that TimedItem.player remotes to the root of the tree.
-var player3 = dt.play(parGroup);
-test(function() {assert_equals(animation2.player,  player3)},
-     "TimedItem.player should remote");
+var player3 = createPlayer(parGroup);
+test(function() { assert_equals(animation2.player, player3); },
+    'TimedItem.player should remote');
 
-// Test that calling play() on a TimedItem with a parent results in
-// reparenting.
-var player4 = dt.play(animation2);
-test(function() {assert_equals(animation2.parent,  null)},
-     "Animation should be reparented");
-test(function() {assert_equals(parGroup.children.length, 0)},
-     "Animation parent should be updated, leaving parGroup.children.length = 0");
-test(function() {assert_equals(player4.source,  animation2)},
-     "Player should use reparented animation");
+// Test that calling play() on a TimedItem with a parent results in reparenting.
+var player4 = createPlayer(animation2);
+test(function() { assert_equals(animation2.parent, null); },
+    'Animation should be reparented');
+test(function() { assert_equals(parGroup.children.length, 0); },
+    'Animation parent should be updated, leaving parGroup.children.length = 0');
+test(function() { assert_equals(player4.source, animation2); },
+    'Player should use reparented animation');
 
 // Test that setting a parent on a TimedItem with a Player causes the player to
 // be disconnected.
 parGroup.append(animation2);
-test(function() {assert_equals(parGroup.player,  player3)},
-     "TimedItem.player should be updated for root");
-test(function() {assert_equals(animation2.player,  player3)},
-     "TimedItem.player should be updated for leaf");
-test(function() {assert_equals(player4.source,  null)},
-     "Player.source should be updated");
-test(function() {assert_equals(animation2.parent,  parGroup)},
-     "Animation.parent should be updated");
-test(function() {assert_equals(parGroup.children.length,  1)},
-      "Animation parent should be updated, leaving parGroup.children.length = 1");
-test(function() {assert_equals(parGroup.children[0],  animation2)},
-     "Animation parent should be updated");
+test(function() { assert_equals(parGroup.player, player3); },
+    'TimedItem.player should be updated for root');
+test(function() { assert_equals(animation2.player, player3); },
+    'TimedItem.player should be updated for leaf');
+test(function() { assert_equals(player4.source, null); },
+    'Player.source should be updated');
+test(function() { assert_equals(animation2.parent, parGroup); },
+    'Animation.parent should be updated');
+test(function() { assert_equals(parGroup.children.length, 1); },
+     'Animation parent should be updated, leaving ' +
+     'parGroup.children.length = 1');
+test(function() { assert_equals(parGroup.children[0], animation2); },
+    'Animation parent should be updated');
 
 // Test that currentTime is zero before timeline starts.
-test(function() {assert_equals(document.timeline.play(animation).currentTime,  0)},
-     "currentTime should be zero before Timeline starts");
+test(function() {
+    assert_equals(createPlayer().currentTime, 0);
+  }, 'currentTime should be zero before Timeline starts');
 
 // Test that startTime is zero before timeline starts.
-test(function() {assert_equals(document.timeline.play(animation).startTime,  0)},
-     "startTime should be zero before Timeline starts");
+test(function() {
+    assert_equals(createPlayer().startTime, 0);
+  }, 'startTime should be zero before Timeline starts');
 
 // Test that setting currentTime has no effect until the timeline starts.
-var player5 = dt.play(animation);
+var player5 = createPlayer();
 player5.currentTime = 42;
-test(function() {assert_equals(player5.currentTime,  0)},
-     "player5's currentTime should always be zero before Timeline starts");
+test(function() { assert_equals(player5.currentTime, 0); },
+    'player5\'s currentTime should always be zero before Timeline starts');
 timing_test(function() {
-    at(0.1, function() {
-      assert_true(player5.currentTime > 42);
-    });
-  }, "player5's updates to currentTime should take effect after Timeline starts");
+    at(0.1, function() { assert_true(player5.currentTime > 42); });
+  }, 'player5\'s updates to currentTime should take effect after Timeline ' +
+     'starts');
 
 // Test that setting startTime has no effect until the timeline starts.
-var player6 = dt.play(animation.clone());
+var player6 = createPlayer();
 player6.startTime = 42;
-test(function() {assert_equals(player6.currentTime,  0)},
-     "player6's currentTime should always be zero before Timeline starts");
+test(function() { assert_equals(player6.currentTime, 0); },
+    'player6\'s currentTime should always be zero before Timeline starts');
 
-// Test that a Player's TimedItem gets a null inherited time until the
-// timeline starts.
-var animation1 = new Animation(document.getElementById("anim"), {left: "100px"});
-dt.play(animation1);
-test(function() {assert_equals(animation1.localTime, null)},
-     "TimedItem's inherited time, and thus " +
-     "localTime should be null before Timeline starts");
+// Test that a Player's TimedItem gets a null inherited time until the timeline
+// starts.
+var animation3 = createAnimation();
+createPlayer(animation3);
+test(function() { assert_equals(animation3.localTime, null); },
+    'TimedItem\'s inherited time, and thus ' +
+    'localTime should be null before Timeline starts');
 timing_test(function() {
-    at(0.0, function() {assert_not_equals(animation1.localTime, null)});
-  }, "TimedItem's inherited time " +
-     "and thus localTime should not be null after Timeline starts");
+    at(0.0, function() { assert_not_equals(animation3.localTime, null); });
+  }, 'TimedItem\'s inherited time and thus localTime should not be null ' +
+     'after Timeline starts');
 
 // Test that TimedItem is updated immediately on calling Timeline.play() after
 // the timeline starts.
-var animation4 = new Animation(
-   document.getElementById("anim"), {left: "100px"});
-test(function() {assert_equals(animation4.localTime,  null)},
-     "localTime should be null before playing");
+var animation4 = createAnimation();
+test(function() { assert_equals(animation4.localTime, null); },
+    'localTime should be null before playing');
 timing_test(function() {
     at(0.0, function() {
-      document.timeline.play(animation4);
-      assert_equals(animation4.localTime,  0)
+      createPlayer(animation4);
+      assert_equals(animation4.localTime, 0)
     });
-  }, "localTime should be set by playing");
+  }, 'localTime should be set by playing');
 
 // Test that updates to currentTime take immediate effect.
 timing_test(function() {
     at(0.0, function() {
-      var animation5 = new Animation(
-        document.getElementById("anim"), {left: "100px"}, 100);
-      document.timeline.play(animation5).currentTime = 42;
-      assert_equals(animation5.localTime,  42);
+      var animation5 = createAnimation();
+      createPlayer(animation5).currentTime = 42;
+      assert_equals(animation5.localTime, 42);
     });
-  }, "Updates to Player.currentTime should take immediate effect");
+  }, 'Updates to Player.currentTime should take immediate effect');
 
 // Test that updates to source take immediate effect.
 timing_test(function() {
     at(0.0, function() {
-      var player = document.timeline.play(new Animation(
-        document.getElementById("anim"), {left: "100px"}));
-      var animation7 = new Animation(
-        document.getElementById("anim"), {left: "100px"});
+      var player = createPlayer();
+      var animation7 = createAnimation();
       player.source = animation7;
-      assert_equals(animation7.localTime,  0);
+      assert_equals(animation7.localTime, 0);
     });
-  }, "Updates to Player.source should take immediate effect");
-
+  }, 'Updates to Player.source should take immediate effect');
 </script>
