Making all tests pass on Chrome Android.

--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -116,6 +116,18 @@ var expected_failures = {
     msie: true,
     message: "Doesn't quite follow path correctly."
   },
+  '/#anim3 at t=(7|8)s/' : {
+    android: true,
+    message: "Android uses integer SVG implementation."
+  },
+  '/#anim4 at t=8s/' : {
+    android: true,
+    message: "Android uses integer SVG implementation."
+  },
+  '/#anim2 at t=9s/' : {
+    android: true,
+    message: "Android uses integer SVG implementation."
+  },
 };
 </script>
 <script src="../bootstrap.js"></script>
