Rebased existing tests onto new default fill behaviour

--- a/test/testcases/auto-test-iterations-fill.html
+++ b/test/testcases/auto-test-iterations-fill.html
@@ -134,6 +134,7 @@ for (var i = 0; i < directions.length; i++) {
     iterations: 3,
     playbackRate: 2,
     direction: dir,
+    fill: 'forwards',
   }));
 }
 
