--- a/test/testcases/auto-test-iterations-alternate.html
+++ b/test/testcases/auto-test-iterations-alternate.html
@@ -36,14 +36,14 @@ var effect = [{left: "100px"}, {left: "500px"}];
 
 var anim1 = new Animation(
     document.getElementById("a"), effect,
-    {duration: 1.0, iterations: 3.0, direction: "alternate"});
+    {duration: 1.0, iterations: 3.0, direction: "alternate", fill: 'forwards'});
 
 var anim2 = new Animation(
     document.getElementById("b"), effect,
-    {duration: 1.0});
+    {duration: 1.0, fill: 'forwards'});
 var parGroup = new ParGroup(
     [anim2],
-    {duration: 1.0, iterations: 3.0, direction: "alternate"});
+    {duration: 1.0, iterations: 3.0, direction: "alternate", fill: 'forwards'});
 
 document.timeline.play(anim1);
 document.timeline.play(parGroup);
