--- a/test/testcases/test-reversed-player-active-phase.html
+++ b/test/testcases/test-reversed-player-active-phase.html
@@ -10,7 +10,7 @@
 <div id="target"></div>
 <script>
 timing_test(function() {
-    var player = target.animate([{left: '0px'}, {left: '100px'}], 2).player;
+    var player = target.animate([{left: '0px'}, {left: '100px'}], {duration: 2, fill: 'forwards'}).player;
 
     at(1, function() {
         assert_styles(target, {left: '50px'});
