--- a/test/testcases/auto-test-fill-values.html
+++ b/test/testcases/auto-test-fill-values.html
@@ -30,73 +30,62 @@ limitations under the License.
   position: relative;
 }
 
-.exp {
-  border-right: 1px solid black;
-}
+.expect { border-right: 1px solid black; }
+.expect.no-effect { width: 300px; }
+.expect.first-frame { width: 400px; }
+.expect.last-frame { width: 500px; }
 
-#ca {
-  top: 50px;
-}
-
-#cb {
-  top: 300px;
-}
-
-#cc {
-  top: 550px;
-}
-
-
-#cd {
-  top: 800px;
-}
+#ca { top: 50px; }
+#cb { top: 300px; }
+#cc { top: 550px; }
+#cd { top: 800px; }
 
 </style>
 
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-  <div style="width: 300px;" class="exp"><div id="a" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="b" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="c" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="d" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="e" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="f" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="g" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="h" class="anim"></div></div>
+  <div class="expect no-effect"><div id="a" class="anim"></div></div>
+  <div class="expect no-effect"><div id="b" class="anim"></div></div>
+  <div class="expect no-effect"><div id="c" class="anim"></div></div>
+  <div class="expect no-effect"><div id="d" class="anim"></div></div>
+  <div class="expect last-frame"><div id="e" class="anim"></div></div>
+  <div class="expect last-frame"><div id="f" class="anim"></div></div>
+  <div class="expect last-frame"><div id="g" class="anim"></div></div>
+  <div class="expect last-frame"><div id="h" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div style="width: 300px;" class="exp"><div id="i" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="j" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="k" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="l" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="m" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="n" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="o" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="p" class="anim"></div></div>
+  <div class="expect no-effect"><div id="i" class="anim"></div></div>
+  <div class="expect no-effect"><div id="j" class="anim"></div></div>
+  <div class="expect no-effect"><div id="k" class="anim"></div></div>
+  <div class="expect no-effect"><div id="l" class="anim"></div></div>
+  <div class="expect first-frame"><div id="m" class="anim"></div></div>
+  <div class="expect first-frame"><div id="n" class="anim"></div></div>
+  <div class="expect first-frame"><div id="o" class="anim"></div></div>
+  <div class="expect first-frame"><div id="p" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div style="width: 300px;" class="exp"><div id="q" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="r" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="s" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="t" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="u" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="v" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="w" class="anim"></div></div>
-  <div style="width: 400px;" class="exp"><div id="x" class="anim"></div></div>
+  <div class="expect no-effect"><div id="q" class="anim"></div></div>
+  <div class="expect no-effect"><div id="r" class="anim"></div></div>
+  <div class="expect no-effect"><div id="s" class="anim"></div></div>
+  <div class="expect no-effect"><div id="t" class="anim"></div></div>
+  <div class="expect first-frame"><div id="u" class="anim"></div></div>
+  <div class="expect first-frame"><div id="v" class="anim"></div></div>
+  <div class="expect first-frame"><div id="w" class="anim"></div></div>
+  <div class="expect first-frame"><div id="x" class="anim"></div></div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div style="width: 300px;" class="exp"><div id="y" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="z" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="aa" class="anim"></div></div>
-  <div style="width: 300px;" class="exp"><div id="ab" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="ac" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="ad" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="ae" class="anim"></div></div>
-  <div style="width: 500px;" class="exp"><div id="af" class="anim"></div></div>
+  <div class="expect no-effect"><div id="y" class="anim"></div></div>
+  <div class="expect no-effect"><div id="z" class="anim"></div></div>
+  <div class="expect no-effect"><div id="aa" class="anim"></div></div>
+  <div class="expect no-effect"><div id="ab" class="anim"></div></div>
+  <div class="expect last-frame"><div id="ac" class="anim"></div></div>
+  <div class="expect last-frame"><div id="ad" class="anim"></div></div>
+  <div class="expect last-frame"><div id="ae" class="anim"></div></div>
+  <div class="expect last-frame"><div id="af" class="anim"></div></div>
 </div>
 
 <div style="height: 1000px;"></div>
