Replace container ids with the direction they represent

--- a/test/testcases/auto-test-fill-values.html
+++ b/test/testcases/auto-test-fill-values.html
@@ -35,16 +35,15 @@ limitations under the License.
 .expect.first-frame { width: 400px; }
 .expect.last-frame { width: 500px; }
 
-#ca { top: 50px; }
-#cb { top: 300px; }
-#cc { top: 550px; }
-#cd { top: 800px; }
-
+#normal { top: 50px; }
+#reverse { top: 300px; }
+#alternate { top: 550px; }
+#alternate-reverse { top: 800px; }
 </style>
 
 <div>Right edge of each box should align with black line at end of test.</div>
 
-<div class="animContainer" id="ca">
+<div class="animContainer" id="normal">
   <div class="expect no-effect"><div id="a" class="anim"></div></div>
   <div class="expect no-effect"><div id="b" class="anim"></div></div>
   <div class="expect no-effect"><div id="c" class="anim"></div></div>
@@ -55,7 +54,7 @@ limitations under the License.
   <div class="expect last-frame"><div id="h" class="anim"></div></div>
 </div>
 
-<div class="animContainer" id="cb">
+<div class="animContainer" id="reverse">
   <div class="expect no-effect"><div id="i" class="anim"></div></div>
   <div class="expect no-effect"><div id="j" class="anim"></div></div>
   <div class="expect no-effect"><div id="k" class="anim"></div></div>
@@ -66,7 +65,7 @@ limitations under the License.
   <div class="expect first-frame"><div id="p" class="anim"></div></div>
 </div>
 
-<div class="animContainer" id="cc">
+<div class="animContainer" id="alternate">
   <div class="expect no-effect"><div id="q" class="anim"></div></div>
   <div class="expect no-effect"><div id="r" class="anim"></div></div>
   <div class="expect no-effect"><div id="s" class="anim"></div></div>
@@ -77,7 +76,7 @@ limitations under the License.
   <div class="expect first-frame"><div id="x" class="anim"></div></div>
 </div>
 
-<div class="animContainer" id="cd">
+<div class="animContainer" id="alternate-reverse">
   <div class="expect no-effect"><div id="y" class="anim"></div></div>
   <div class="expect no-effect"><div id="z" class="anim"></div></div>
   <div class="expect no-effect"><div id="aa" class="anim"></div></div>
@@ -94,34 +93,32 @@ limitations under the License.
 <script>
 "use strict";
 
-var containers = ["ca", "cb", "cc", "cd"];
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
 var fills = ["none", "backwards", "forwards", "both"];
 var effect = [{left: "100px"}, {left: "200px"}];
 
-for (var i = 0; i < containers.length; i++) {
-  var divs =
-      document.getElementById(containers[i]).getElementsByClassName('anim');
+directions.forEach(function (direction) {
+  var divs = document.getElementById(direction).getElementsByClassName('anim');
   for (var j = 0; j < fills.length; j++) {
     document.timeline.play(
         new Animation(divs[2 * j], effect, {
           iterations: 4,
-          direction: directions[i],
+          direction: direction,
           duration: 1,
           fill: fills[j]
         }));
-    divs[2 * j].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] +
+    divs[2 * j].innerHTML = "dir: " + direction + " fill: " + fills[j] +
         " dur: 1";
     document.timeline.play(
         new Animation(divs[2 * j + 1], effect, {
           iterations: 4,
-          direction: directions[i],
+          direction: direction,
           duration: 0,
           fill: fills[j]
         }));
-    divs[2 * j + 1].innerHTML = "dir: " + directions[i] + " fill: " + fills[j] +
+    divs[2 * j + 1].innerHTML = "dir: " + direction + " fill: " + fills[j] +
         " dur: 0";
   }
-}
+});
 
 </script>
